feat(listings): deletion flow require and record reason of delete if requested by admin
