# src/main/java/it/dieti/dietiestatesbackend/domain/moderation/ModerationActionType.java
@@ -1,0 +1,7 @@
+package it.dieti.dietiestatesbackend.domain.moderation;
+
+public enum ModerationActionType {
+    EDIT,
+    DELETE,
+    RESTORE
+}
